scripts/nullaway/annotator/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8.txt
../annotator/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/Value.java:14: error: [NullAway] initializer method does not guarantee @NonNull field value (line 8) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Value() {
           ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/visitor/JsonVisitor.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
